--- a/3.18.2.html
+++ b/3.18.2.html
@@ -9,7 +9,7 @@
   <caption> <h1>汽车排行榜</h1>
   </caption>
   						<!-- 设置标题 -->
-<tr bgcolor="blue" >
+<tr bgcolor="gray" >
 	<th>序号</th>
 <th>品牌</th>
 <th>价格</th>
