--- a/4.2.5homework2.html
+++ b/4.2.5homework2.html
@@ -52,11 +52,18 @@
 			/*opacity: 0;*/
 			/*隐藏图标*/
 		}
+		.con input:checked:hover,
 		.con input:checked + a {
 			background-color: yellow;
 			/*这是一个伪类选择器
 			哪个被 选中，哪个变成黄色*/
 		}
+
+		.con input:hover + a {
+			background-color: gray;
+		}
+
+		
 		
 
 	</style>
