--- a/4.12.2.html
+++ b/4.12.2.html
@@ -9,7 +9,7 @@
 			background-color: #ccc;
 			display: none;
 		}
-	/*	input:hover+div{
+		/*input:hover+div{
 			display: inline-block;
 		}*/
 		/*版本一*/
@@ -18,16 +18,19 @@
 	</style>
 </head>
 <body>
-<!-- <input type="checkbox" name=""> -->
+<input type="checkbox" name="">
 					<!-- 版本一 -->
 
-<!-- . 就是的  的意思 -->
-<!-- 
-<input type="checkbox" name=""  
+<!-- . （点）  就是的  的意思 -->
+
+
+
+
+<!-- <input type="checkbox" name=""  
 onmouseover="box.style.display='block';"
 onmouseout="box.style.display='none';"> -->
 
-<!-- 效果一样 -->
+<!-- 上面和下面这个  效果一样 -->
 
 <input type="checkbox" name=""  
 onmouseover="document.getElementById('box').style.display='block';"
