--- a/4.13.7.html
+++ b/4.13.7.html
@@ -17,8 +17,9 @@ window.onload = function(){
 
 				// 调用say函数没毛病
 
-		document.getElementById('btm').onclick = function() ;
-		alert('sagdgfjsh');
+		document.getElementById('btm').onclick = function() {
+		alert('sagdgfjsh');}
+		// 空的时候这样也可以调用
 
 }
 
