--- a/4.13.2wai.html
+++ b/4.13.2wai.html
@@ -14,13 +14,14 @@
 	</style>
 	<!-- <script type="text/javascript" src="4.13.js"></script> -->
 	<!-- 调用外部文件 -->
-	<script>
+	<script src="4.13.3.js">
+		// 调用函数更换背景
 		
-		 function tored(){
-		 	document.getElementById('box').style.background = 'pink';
-		 }
+		 // function tored(){
+		 // 	document.getElementById('box').style.background = 'pink';
+		 // }
 
-	document.getElementById('box').onclick = tored;
+	// document.getElementById('box').onclick = tored;
 	// 必须写到box下面才可以
 
 		
@@ -33,12 +34,23 @@
 			// document.getElementById('box').className = 'cl';
 			// 添加类，必须写到box 下面才可以，
 
-
+	
 		
 	</script>
 </head>
 <body>
-	<div id="box" ></div>
+	<div id="box" onclick="tored()"  onmouseover="togreen()"></div>
+
+
+
+	<script>
+	// 	 function tored(){
+	// 	 	document.getElementById('box').style.background = 'pink';
+	// 	 }
+
+	// document.getElementById('box').onclick = tored;
+
+	</script>
 
 
 
