--- a/4.22.5.html
+++ b/4.22.5.html
@@ -46,20 +46,20 @@
 				// }
 				ofa.onmouseover =function(){
 				
-				timer =setInterval(function(){
-					if (Math.abs(0-ofa.offsetLeft)<=Math.abs(5) ) {
-					ofa.style.left='0px';
-					clearInterval(timer);
+				// timer =setInterval(function(){
+				// 	if (Math.abs(0-ofa.offsetLeft)<=Math.abs(5) ) {
+				 	ofa.style.left='0px';
+				// 	clearInterval(timer);
 
-				}else{
-					ofa.style.left=ofa.offsetLeft+'-5px';}
+				// }else{
+				// 	ofa.style.left=ofa.offsetLeft+'-5px';}
 				
-				},30)
+				// },30)
 			}
 
 					ofa.onmouseout =function(){
 						//s=1
-									ofa.style.left='-400px';
+							ofa.style.left='-400px';
 								}
 
 
