--- a/4.23.2.html
+++ b/4.23.2.html
@@ -27,7 +27,7 @@
 				}
 				if (Math.abs(target-curr)<=Math.abs(speed)) {
 					clearInterval(timer);
-					obj.style.width= target;
+					obj.style.width= target+'px';
 				}else{
 				obj.style.width=curr+speed +'px';}
 		},30)
