--- a/4.26.1.html
+++ b/4.26.1.html
@@ -9,9 +9,16 @@
 		var aa=4;
 		console.log(window.aa);
 		console.log(aa);
+		// 默认都是在window对象下面的
 
 		alert('ff');
 		window.alert('ff');
+
+
+		// 属性与方法
+		// 	对象中的的变量，通常叫做属性
+		// 对象中的函数，通常把他叫做方法。
+
 
 	</script>
 </head>
