--- a/4.26.2.html
+++ b/4.26.2.html
@@ -11,6 +11,10 @@
 				//window.open("about:blank");
 				//window.open("about:blank","_self");
 				window.open("https://www.kuazhu.com");
+			obtn.onclick = function(){
+				window.close();
+
+			}
 		}
 	}
 	</script>
