--- a/4.27.3只能输入数字.html
+++ b/4.27.3只能输入数字.html
@@ -8,9 +8,9 @@
 			var otxt =document.getElementById('txt');
 			otxt.onkeydown =function(ev){
 				var oevent =ev||enent;
-				if (oevent.keyCode!=37&&oevent.keyCode!=39&&oevent.keyCode!=8&&oevent.keyCode!=48&&oevent.keyCode<48||oevent.keyCode>57) {
-					return false;
-				}
+				if (oevent.keyCode!=37&&oevent.keyCode!=39&&oevent.keyCode!=8&&oevent.keyCode!=48&&oevent.keyCode<48||oevent.keyCode>57)
+				 {	return false;}
+				
 			}
 		}
 	</script>
