--- a/5.3.2事件调用.html
+++ b/5.3.2事件调用.html
@@ -8,6 +8,7 @@
 			height: 500px;
 			border: 1px solid #000;
 		}
+		
 	</style>
 	<script type="text/javascript">
 		function show(){
@@ -23,6 +24,7 @@
 		// 	//打不出来两个
 		// }
 
+		//这种增添事件删除事件的方法相对兼容性较好
 		odiv.addEventListener('click',show,false)
 		//添加事件
 
