--- a/5.4.3面向对象.html
+++ b/5.4.3面向对象.html
@@ -19,7 +19,10 @@
 		console.log(typeof obj);
 		console.log(obj.name);
 		obj.say();
-		for( in obj ) 
+		for(key in obj )
+		{
+			console.log(key);
+		} 
 
 
 	</script>
