--- a/5.6.7.html
+++ b/5.6.7.html
@@ -21,7 +21,7 @@ window.onload = function (){
 		}
 		
 		// alert(arr.sum());
-		arr.su();
+		console(arr.su());
 		// var arr1= Array[2,55,4,16,21];
 		// console.log(arr1.sum);
 		Number.prototype.add = function(num){return(this+num);}
