--- a/5.6.11.html
+++ b/5.6.11.html
@@ -26,6 +26,8 @@
 
 		Object.getOwnPropertyDescriptor(obj,name);
 		//查看属性权限，写的没用
+		console.log(Object.getOwnPropertyDescriptor(obj,name));
+		//返回true,不会变
 
 
 	</script>
