--- a/5.9.2.html
+++ b/5.9.2.html
@@ -7,12 +7,7 @@
 	*{
 
 	}
-		#box{
-			width: 150px;
-			height: 150px;
-			background-color: red;
-			position: absolute;
-		}
+	
 	</style>
 	<script type="text/javascript">
 		// var obox = null;
@@ -24,38 +19,66 @@ window.onload = function(){
 }
 
 fla.prototype.init = function(){
-	
+	this.obox =document.createElement('div');
+		this.obox.style.width=this.width+'px';		 
+		this.obox.style.height=this.height+'px';
+	    this.obox.style.background=this.background;
+	   
+	    this.obox.style.position='absolute';
+	    document.body.appendChild(this.obox);
+	  	//初始化  
 }
 //this.obox
 
-		function fla(option){
-		this.obox =document.getElementById('box');
-		this.obox =document.createElement('div');
-		this.obox.style.width=option.width+'px';		 
-		this.obox.style.height=option.height+'px';
-	    this.obox.style.background=option.background;
-	    this.obox.style.position='absolute';
-	    document.body.appendChild(this.obox);
-	    console.log(this);
-			 this.init;
-
-			 //属性罗列
-			 this.disx=0;
-			 this.disy=0;
-			  console.log(this);
-
-			 var _self=this;
+	function fla(option){
+		 //属性罗列
+			this.disx=0;
+			this.disy=0;
+			this.width=option.width;
+			this.height=option.height;
+			this.background=option.background;
+		
+			this.init();
+			
 			 //事件绑定
-			 this.obox.onmousedown =function(){
-			 _self.fndown();}
-	//法二
-		// this.obox.onmousedown = this.fndown.bind(this);
-	//法一			
+	this.bindEvent();
 	
 	}
 
 
+/*
+	fla.prototype.bindEvent=function(){	
 
+		this.obox.onmousedown= function(ev){
+			var oevent = ev||event;
+		this.disx = oevent.clientX - this.obox.offsetLeft;
+		this.disy = oevent.clientY - this.obox.offsetTop;
+
+		document.onmousemove = this.move.bind(this);
+		document.onmouseup = this.up;
+		}.bind(this)
+	}*
+		//法三：匿名函数bind，也是函数，有返回值。这样写。里面的this就是fla对象，不再是box
+	
+
+	/*
+	fla.prototype.bindEvent=function(){	
+	var _self= this;
+	this.obox.onmousedown= function(ev){
+			var oevent = ev||event;
+				_self.disx = oevent.clientX - _self.obox.offsetLeft;
+				_self.disy = oevent.clientY - _self.obox.offsetTop;
+				document.onmousemove = _self.move.bind(_self);
+				document.onmouseup = _self.up;
+		}
+	}
+	*/
+	//法二：用this存放fla对象，函数里面用_self指代this（对象）
+
+	/*
+	fla.prototype.bindEvent=function(){
+	this.obox.onmousedown = this.fndown.bind(this);	
+	}
 	fla.prototype.fndown= function(ev){
 		console.log(this);
 			var oevent = ev||event;
@@ -65,6 +88,9 @@ fla.prototype.init = function(){
 			document.onmousemove = this.move.bind(this);
 			document.onmouseup = this.up;
 	}
+	*/
+	// 法一调用函数同时bind
+
 	fla.prototype.move =function(ev){
 		
 			var oevent =ev||event;
