--- a/5.10.8.html
+++ b/5.10.8.html
@@ -5,6 +5,8 @@
 	<script type="text/javascript">
 		 var str='ahfljkf  hljk https://www.csdn.net/https://www.kuazhu.com';
 		var reg = /(\w+):\/\/([\w\.]+)\/(\w*)/g;
+		console.log(typeof reg);
+		//正则类型object
 console.log(str.match(reg));
 	</script>
 </head>
