--- a/5.13.3.html
+++ b/5.13.3.html
@@ -18,6 +18,14 @@
 			<input type="checkbox" value="lanqi" name="fa" checked="checked">篮球
 			<input type="checkbox" value="lanqi2" name="fa">组曲
 		</div>
+		<div>	
+				<select>
+					<option>背景</option>
+					<option selected="true">背景2</option>
+					<option>背景3</option>
+
+				</select>
+		</div>
 	</form>
 	<form action="http://www.baidu.com" id="form2">
 		<div>
@@ -30,6 +38,7 @@
 			<input type="submit" >
 			<input type="submit" > 
 		</div>
+
 		
 	</form>
 </body>
