--- a/5.21.3设计模式-观察者模式-布置作业.html
+++ b/5.21.3设计模式-观察者模式-布置作业.html
@@ -12,10 +12,11 @@
 			Teacher.prototype= {
 				constrctor:Teacher,
 				__proto__:Object.prototype,
-				register:function(msg){
-					this.students.push(msg);
+				register:function(student){
+					this.students.push(student);
+					//这是一个让学生添加自己的功能
 				},
-				pulish:function(){
+				publish:function(msg){
 					for (var i = 0; i < this.students.length; i++) {
 						this.students[i].listen(msg);
 					}
@@ -28,6 +29,8 @@
 		(function(w){
 			function student(name,Teacher){
 				this.name =name;
+				Teacher.register(this);
+				//调用老师上面的方法
 				this.msg='';
 
 			}
@@ -37,6 +40,7 @@
 				listen:function(msg){
 					this.msg=msg;
 				}
+				//调用listen，然后接受老师发的
 			}
 			w.student=student;
 		})(window);
@@ -46,11 +50,12 @@
 		var s2 = new student('jj',teach);
 		var s3 = new student('ss',teach);
 		//学生调用老师上的方法。
-		console.log(teach);
-		console.log(s1);
+		//console.log(teach);
+		//console.log(s1);
 
-			teach.pubish('zzzzzzz');
-		console.log(s1.msg);
+			teach.publish('zzzzzzz');
+		console.log(s1.name+s1.msg);
+		console.log(s2.msg);
 	</script>
 </head>
 <body>
