--- a/5.27.7.html
+++ b/5.27.7.html
@@ -16,8 +16,8 @@
 			var odiv2 = document.getElementById('div3');
 			var $div3= $(odiv2);
 				$div3.css({
-					"color":"blue",
-					"font-size":"30px"
+					color:'blue',
+					
 				});
 
 		})
@@ -26,6 +26,6 @@
 <body>
 		<div>2</div>
 		<div>33</div>
-		<div>333</div>
+		<div id="div3">333</div>
 </body>
 </html>
