--- a/5.31.6jq-ajax.html
+++ b/5.31.6jq-ajax.html
@@ -8,8 +8,18 @@
 			$('button').click(function(){
 				$.get("./5.24.json",{name:"dd",age:55},function(data){
 					console.log(data);
-				})
-			})
+				},'json');
+				$.getJSON("./5.24.json",{name:"dd",age:55},function(data){
+					console.log(data);
+				});
+				$.getScript("./5.24.js",function(data){
+					console.log(data);
+				});
+				$.post("./post",{name:"dd",age:55},function(data){
+					console.log(data);
+				},'json');			
+
+			});
 		})
 		
 	</script>
